# ipykernel-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
ipykernel_mcp/: server.py
tests/: test_server.py
