[project]
name = "ipykernel-mcp"
version = "0.1.0"
description = "MCP server for IPython kernel management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0",
    "jupyter-client",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pre-commit>=4.5.1",
    "pytest",
    "pytest-asyncio",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
ipykernel-mcp = "ipykernel_mcp.server:main"
